add deleteConfig, add flush() to jsonConfig menu

--- a/libraries/MyCockpit/data/index.htm
+++ b/libraries/MyCockpit/data/index.htm
@@ -97,6 +97,11 @@ DebugOut to :
 <input type=text" name="val" value="">
 </form> 
 
+<form action="/deleteConfig">
+<input type="submit" value="Delete config">
+<input type=text" name="key" value="">
+</form> 
+
 <h3>Links</h3>
 
 <a href="ftp.htm">FTP Cockpit</a>
