--- a/libraries/MyCockpit/data/ftp.htm
+++ b/libraries/MyCockpit/data/ftp.htm
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>ESP8266 Home - FTP</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
-<body>
+<body style="margin:5px">
 
-<h2>ESP8266 Home - FTP</h2>
+  <ul class="nav nav-pills">
+    <li role="presentation"><a href="index.htm">Home</a></li>
+    <li role="presentation" class="active"><a href="/ftp.htm">FTP</a></li>
+    <li role="presentation"><a href="/custom.htm">Custom</a></li>
+  </ul>
 
-<form action="/ftpopen">
-<input type="submit" value="ftp open">
-</form> 
 
-<form action="/ftpbye">
-<input type="submit" value="ftp bye">
-</form> 
+  <div class="container">
+    <h2>ESP8266 Home - FTP</h2>
+    <div class="row">
+      <div class="col-md-4">
 
-<form action="/ftpls">
-<input type="submit" value="ftp ls">
-</form> 
+        <div class="form-group">
+          <a class="btn btn-default" href="/ftpopen" role="button">open</a>
+          <a class="btn btn-default" href="/ftpbye" role="button">bye</a>
+          <a class="btn btn-default" href="/ftpls" role="button">ls</a>
+        </div>
 
-<form action="/ftpcd">
-<input type="submit" value="ftp cd">
-<input type=text" name="arg" value="">
-</form> 
+        <form action="/ftpcd">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">cd</button></span>
+              <input type="text" class="form-control" name="arg" value="">
+            </div>
+          </div>
+        </form>
 
-<form action="/ftpput">
-<input type="submit" value="ftp put">
-<input type=text" name="arg" value="">
-</form> 
+        <form action="/ftpput">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">put</button></span>
+              <input type="text" class="form-control" name="arg" value="">
+            </div>
+          </div>
+        </form>
 
-<form action="/ftpget">
-<input type="submit" value="ftp get">
-<input type=text" name="arg" value="">
-</form> 
+        <form action="/ftpget">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">get</button></span>
+              <input type="text" class="form-control" name="arg" value="">
+            </div>
+          </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
