--- a/libraries/MyCockpit/data/index.htm
+++ b/libraries/MyCockpit/data/index.htm
@@ -1,112 +1,193 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title>ESP8266 Home</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head -->
+  <title>ESP8266 Cockpit</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
+
 <body>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"><span id="brandtxt" style="color:#00ff00">ESP8266 Cockpit<span></a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/index.htm">Home</a></li>
+          <li><a href="/ftp.htm">FTP</a></li>
+          <li><a href="/custom.htm">Custom</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-<h2>ESP8266 Home</h2>
+  <div class="container">
+    <Br><Br><Br>
+    <div class="row">
+      <div class="col-md-4">
+        <h3>File System</h3>
+        <form action="/list">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">ls</button></span>
+              <input type="text" class="form-control" class="form-control" name="dir" value="/">
+            </div>
+          </div>
+        </form>
 
-<h3>File System</h3>
-<form action="/list">
-<input type="submit" value="ls">
-<input type=text" name="dir" value="/">
-</form> 
+        <form action="/create">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">create</button></span>
+              <input type="text" class="form-control" name="file" value="/a.txt">
+            </div>
+          </div>
+        </form>
 
-<form action="/create">
-<input type="submit" value="create">
-<input type=text" name="file" value="/a.txt">
-</form> 
+        <form action="/delete">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">delete</button></span>
+<!--              <input type="text" class="form-control" name="file" value="/a.txt">
+              <select class="form-control" name="file" id="delete_select"></select>
+-->
+              <input type="text" class="form-control" name="file" autocomplete="on" list="delete_file_list">
+              <datalist id="delete_file_list"></datalist>
+            </div>
+          </div>
+        </form>
 
-<form action="/delete">
-<input type="submit" value="delete">
-<input type=text" name="file" value="/a.txt">
-</form>
-
-<form action="/copy">
-<input type="submit" value="copy">
-<input type=text" name="file1" value="">
-<input type=text" name="file2" value="">
-</form> 
-
-<form method='POST' action='/edit' enctype='multipart/form-data'>
-<input type='submit' value='Upload'>
-<input type='file' name='upload'>
-</form>
-
-<form action="/du"  style="display:inline">
-<input type="submit" value="du">
-</form> 
-
-<form action="/refresh"  style="display:inline">
-<input type="submit" value="refresh">
-</form> 
-
-<form action="/format"  style="display:inline">
-<input type="submit" value="Formatting SPIFFS" style="background-color:lightPink">
-</form> 
-
-<h3>ESP System</h3>
-<form action="/p"  swtyle="display:inline">
-<input type="submit" value="system info">
-</form> 
-
-<form action="/restart"  style="display:inline">
-<input type="submit" value="Restart ESP" style="background-color:lightPink">
-</form> 
-
-<form action="/shutdown"  style="display:inline">
-<input type="submit" value="Shutdown" style="background-color:lightPink">
-</form> 
+        <form action="/copy" class="form-inline">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">copy</button></span>
+              <input type="text" class="form-control" name="file1" autocomplete="on" list="copy_file_list" style="width:20ex">
+              <datalist id="copy_file_list"></datalist>
+              <input type="text" class="form-control" name="file2" value="" style="width:20ex">
+            </div>
+          </div>
+        </form>
 
 
-<h3>Application</h3>
+        <form method="POST" action="/edit" enctype="multipart/form-data">
+          <div class="form-group" style="margin:10px 0px">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">Upload</button></span>
+              <input type="file" class="form-control" name="upload">
+              <!--
+              <label for="file_upload" style="padding:6px; margin:2px; border:solid 1px; border-radius:3px;">
+                 Select File
+                 <input type="file" name="upload" id="file_upload" style="display:none;">
+              </label>
+              -->
+            </div>
+          </div>
+        </form>
 
-<form action="/cmd">
-<input type="submit" value="Command">
-<input type=text" name="cmd" value="help">
-</form> 
+        <a class="btn btn-default" href="/du" role="button">du</a>
 
-DebugOut to :
+        <a class="btn btn-danger" href="/refresh" role="button">refresh</a>
 
-<form action="/debugoutserial" style="display:inline;">
-<input type="submit" value="Serial">
-</form> 
+        <a class="btn btn-danger" href="/format" role="button">Formatting SPIFFS</a>
 
-<form action="/debugoutnull" style="display:inline;">
-<input type="submit" value="Null">
-</form> 
+      </div>
 
-<form action="/debugoutfile" style="display:inline;">
-<input type="submit" value="File">
-<input type=text" name="file" value="">
-</form> 
+      <div class="col-md-4">
+        <h3>ESP System</h3>
+        <a class="btn btn-default" href="/p" role="button">system info</a>
+        <a class="btn btn-danger" href="/restart" role="button">Restart ESP</a>
+        <a class="btn btn-danger" href="/shutdown" role="button">Shutdown</a>
+      </div>
 
-<form action="/wolan">
-<input type="submit" value="WoL to Lenovo">
-</form> 
+      <div class="col-md-4">
+        <h3>Application</h3>
 
-<form action="/showConfig">
-<input type="submit" value="Show config">
-</form> 
+        <form action="/cmd">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-default" type="submit">Command</button></span>
+              <input type="text" class="form-control" name="cmd" value="help">
+            </div>
+          </div>
+        </form>
 
-<form action="/setConfig" style="display:inline;">
-<input type="submit" value="Set config">
-<input type=text" name="key" value="">
-<input type=text" name="val" value="">
-</form> 
+        <label>DebugOut To</label>
+        <div name="debugout" style="margin:10px">
+          <a class="btn btn-default" href="/debugoutserial" role="button">Serial</a>
+          <a class="btn btn-default" href="/debugoutnull" role="button">Null</a>
+          <form action="/debugoutfile" style="display:inline;">
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-btn"><button class="btn btn-default" type="submit">File</button></span>
+                <input type="text" class="form-control" name="file" value="">
+              </div>
+            </div>
+          </form>
+        </div>
 
-<form action="/deleteConfig">
-<input type="submit" value="Delete config">
-<input type=text" name="key" value="">
-</form> 
+        <label>JSON Config</label>
+        <div name="config" style="margin:10px">
+          <a class="btn btn-default" href="/showConfig" role="button">Show</a>
+          <form action="/setConfig" class="form-inline">
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-btn"><button class="btn btn-default" type="submit">Set</button></span>
+                <input type="text" class="form-control" name="key" autocomplete="on" list="show_config_list" style="width:20ex">
+                <datalist id="show_config_list"></datalist>
+                <input type="text" class="form-control" name="val" value="" style="width:20ex">
+              </div>
+            </div>
+          </form>
 
-<h3>Links</h3>
+          <form action="/deleteConfig">
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-btn"><button class="btn btn-default" type="submit">delete</button></span>
+                <input type="text" class="form-control" name="key" value="">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div><!-- /container -->
 
-<a href="ftp.htm">FTP Cockpit</a>
-<br>
-<a href="custom.htm">Custom Page</a>
+  <!-- Bootstrap core JavaScript -- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+  <script>
+    jQuery(document).ready(function($) {
+      var c = 2;
+      $.get("/json/ls" ,function(data){
+        for(var i in data) {
+          $("#delete_file_list").append("<option value=" +data[i].name + ">" + data[i].name +  "</option>");
+          $("#copy_file_list").append("<option value=" +data[i].name + ">" + data[i].name +  "</option>");
+        }
+        c = c - 1;
+        if( c == 0 ) { document.getElementById("brandtxt").style.color = "#000000"; }
+      });
+      $.get("/json/showConfig" ,function(data){
+        for(var key in data) {
+          $("#show_config_list").append("<option value=" +key + ">" + key +  "</option>");
+        }
+        c = c - 1;
+        if( c == 0 ) { document.getElementById("brandtxt").style.color = "#000000"; }      
+      });
+    });
+</script>
 </body>
 </html>
