--- a/libraries/MyCockpit/data/ftp.htm
+++ b/libraries/MyCockpit/data/ftp.htm
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>ESP8266 Home - FTP</title>
+  <title>ESP8266 - FTP</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -20,7 +20,7 @@
 
 
   <div class="container">
-    <h2>ESP8266 Home - FTP</h2>
+    <h2>ESP8266 - FTP</h2>
     <div class="row">
       <div class="col-md-4">
 
