--- a/libraries/MyCockpit/data/index.htm
+++ b/libraries/MyCockpit/data/index.htm
@@ -109,6 +109,17 @@
 
         <a class="btn btn-danger" href="/format" role="button">Formatting SPIFFS</a>
 
+        <br><br>
+        <form action='/ftpGetInitFiles'  class="form-inline">
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-btn"><button class="btn btn-danger" type="submit">FTP Get Init Files</button></span>
+              <input type="text" class="form-control" name="files" value="index.htm|ftp.htm|">
+            </div>
+          </div>
+        </form>
+
+
       </div>
 
       <div class="col-md-4">
